--- a/PaymentTest/PaymentTest.csproj
+++ b/PaymentTest/PaymentTest.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
     <PackageReference Include="Parbad.AspNetCore" Version="1.5.0" />
     <PackageReference Include="Parbad.Gateway.IranKish" Version="1.3.0" />
     <PackageReference Include="Parbad.Storage.Cache" Version="1.5.0" />
